--- a/simTV-NEO.html
+++ b/simTV-NEO.html
@@ -208,7 +208,7 @@ $(function() {
 		while ( shown_img_array.indexOf(img_loc)>=0 ) { // repeat function until no duplicate
 			//console.log('found ' + img_loc);
 			$('#error_log').text('found ' + img_loc);
-			var img_loc = randomStaticImg();
+			var img_loc = randomSupplierImg();
 		}
 		
 		//console.log('show ' + img_loc);
